--- a/website/index.html
+++ b/website/index.html
@@ -1,61 +1,170 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html>
 
 <head>
+    <title>W3.CSS Template</title>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <script src="java.js"></script>
-    <title>Solicitações</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <style>
+        html,
+        body,
+        h1,
+        h2,
+        h3,
+        h4,
+        h5,
+        h6 {
+            font-family: "Roboto", sans-serif
+        }
+    </style>
 </head>
 
-<body>
+<body class="w3-light-grey">
 
+    <!-- Page Container -->
+    <div class="w3-content w3-margin-top" style="max-width:1400px;">
 
-    <div class="header" id="myHeader">
-        <h2>My Header</h2>
+        <!-- The Grid -->
+        <div class="w3-row-padding">
+
+            <!-- Left Column -->
+            <div class="w3-third">
+
+                <div class="w3-white w3-text-grey w3-card-4">
+                    <div class="w3-display-container">
+                        <img src="/w3images/avatar_hat.jpg" style="width:100%" alt="Avatar">
+                        <div class="w3-display-bottomleft w3-container w3-text-black">
+                            <h2>Jane Doe</h2>
+                        </div>
+                    </div>
+                    <div class="w3-container">
+                        <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Designer</p>
+                        <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>London, UK</p>
+                        <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>ex@mail.com</p>
+                        <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>1224435534</p>
+                        <hr>
+
+                        <p class="w3-large"><b><i
+                                    class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Skills</b></p>
+                        <p>Adobe Photoshop</p>
+                        <div class="w3-light-grey w3-round-xlarge w3-small">
+                            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:90%">90%</div>
+                        </div>
+                        <p>Photography</p>
+                        <div class="w3-light-grey w3-round-xlarge w3-small">
+                            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:80%">
+                                <div class="w3-center w3-text-white">80%</div>
+                            </div>
+                        </div>
+                        <p>Illustrator</p>
+                        <div class="w3-light-grey w3-round-xlarge w3-small">
+                            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:75%">75%</div>
+                        </div>
+                        <p>Media</p>
+                        <div class="w3-light-grey w3-round-xlarge w3-small">
+                            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%">50%</div>
+                        </div>
+                        <br>
+
+                        <p class="w3-large w3-text-theme"><b><i
+                                    class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i>Languages</b></p>
+                        <p>English</p>
+                        <div class="w3-light-grey w3-round-xlarge">
+                            <div class="w3-round-xlarge w3-teal" style="height:24px;width:100%"></div>
+                        </div>
+                        <p>Spanish</p>
+                        <div class="w3-light-grey w3-round-xlarge">
+                            <div class="w3-round-xlarge w3-teal" style="height:24px;width:55%"></div>
+                        </div>
+                        <p>German</p>
+                        <div class="w3-light-grey w3-round-xlarge">
+                            <div class="w3-round-xlarge w3-teal" style="height:24px;width:25%"></div>
+                        </div>
+                        <br>
+                    </div>
+                </div><br>
+
+                <!-- End Left Column -->
+            </div>
+
+            <!-- Right Column -->
+            <div class="w3-twothird">
+
+                <div class="w3-container w3-card w3-white w3-margin-bottom">
+                    <h2 class="w3-text-grey w3-padding-16"><i
+                            class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience
+                    </h2>
+                    <div class="w3-container">
+                        <h5 class="w3-opacity"><b>Front End Developer / w3schools.com</b></h5>
+                        <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2015 - <span
+                                class="w3-tag w3-teal w3-round">Current</span></h6>
+                        <p>Lorem ipsum dolor sit amet. Praesentium magnam consectetur vel in deserunt aspernatur est
+                            reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure,
+                            iste.</p>
+                        <hr>
+                    </div>
+                    <div class="w3-container">
+                        <h5 class="w3-opacity"><b>Web Developer / something.com</b></h5>
+                        <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Mar 2012 - Dec 2014
+                        </h6>
+                        <p>Consectetur adipisicing elit. Praesentium magnam consectetur vel in deserunt aspernatur est
+                            reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure,
+                            iste.</p>
+                        <hr>
+                    </div>
+                    <div class="w3-container">
+                        <h5 class="w3-opacity"><b>Graphic Designer / designsomething.com</b></h5>
+                        <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2010 - Mar 2012
+                        </h6>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p><br>
+                    </div>
+                </div>
+
+                <div class="w3-container w3-card w3-white">
+                    <h2 class="w3-text-grey w3-padding-16"><i
+                            class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
+                    <div class="w3-container">
+                        <h5 class="w3-opacity"><b>W3Schools.com</b></h5>
+                        <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Forever</h6>
+                        <p>Web Development! All I need to know in one place</p>
+                        <hr>
+                    </div>
+                    <div class="w3-container">
+                        <h5 class="w3-opacity"><b>London Business School</b></h5>
+                        <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2013 - 2015</h6>
+                        <p>Master Degree</p>
+                        <hr>
+                    </div>
+                    <div class="w3-container">
+                        <h5 class="w3-opacity"><b>School of Coding</b></h5>
+                        <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2010 - 2013</h6>
+                        <p>Bachelor Degree</p><br>
+                    </div>
+                </div>
+
+                <!-- End Right Column -->
+            </div>
+
+            <!-- End Grid -->
+        </div>
+
+        <!-- End Page Container -->
     </div>
 
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-    aliqua. Tincidunt augue interdum velit euismod in pellentesque massa. Malesuada proin libero nunc consequat interdum
-    varius sit. In tellus integer feugiat scelerisque varius. Commodo viverra maecenas accumsan lacus vel facilisis
-    volutpat est. Rutrum tellus pellentesque eu tincidunt. In egestas erat imperdiet sed. Venenatis cras sed felis eget
-    velit aliquet sagittis. Malesuada fames ac turpis egestas integer eget aliquet nibh praesent. Sit amet massa vitae
-    tortor. Nibh praesent tristique magna sit amet purus gravida. Velit scelerisque in dictum non consectetur a. Ut
-    morbi tincidunt augue interdum velit euismod in. Volutpat blandit aliquam etiam erat velit scelerisque in. Ultrices
-    sagittis orci a scelerisque purus semper eget duis. Ut diam quam nulla porttitor massa id neque aliquam.
+    <footer class="w3-container w3-teal w3-center w3-margin-top">
+        <p>Find me on social media.</p>
+        <i class="fa fa-facebook-official w3-hover-opacity"></i>
+        <i class="fa fa-instagram w3-hover-opacity"></i>
+        <i class="fa fa-snapchat w3-hover-opacity"></i>
+        <i class="fa fa-pinterest-p w3-hover-opacity"></i>
+        <i class="fa fa-twitter w3-hover-opacity"></i>
+        <i class="fa fa-linkedin w3-hover-opacity"></i>
+        <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+    </footer>
 
-    Volutpat blandit aliquam etiam erat velit scelerisque in dictum. Egestas erat imperdiet sed euismod nisi porta.
-    Euismod lacinia at quis risus sed vulputate odio ut enim. Lorem sed risus ultricies tristique nulla aliquet enim
-    tortor at. Leo a diam sollicitudin tempor id eu. Curabitur vitae nunc sed velit dignissim sodales ut eu sem. Ut
-    placerat orci nulla pellentesque dignissim enim. In est ante in nibh mauris cursus mattis molestie. Dignissim cras
-    tincidunt lobortis feugiat vivamus at augue eget arcu. Vulputate sapien nec sagittis aliquam malesuada bibendum
-    arcu.
-
-    Pretium fusce id velit ut. Sed sed risus pretium quam vulputate dignissim suspendisse in. Diam volutpat commodo sed
-    egestas egestas fringilla. Vulputate eu scelerisque felis imperdiet proin fermentum leo. Sed id semper risus in
-    hendrerit gravida rutrum quisque. Egestas dui id ornare arcu odio ut. Pharetra pharetra massa massa ultricies mi
-    quis hendrerit dolor magna. Quisque sagittis purus sit amet volutpat consequat mauris nunc congue. Nisl nunc mi
-    ipsum faucibus vitae aliquet. Tincidunt praesent semper feugiat nibh sed pulvinar. Volutpat consequat mauris nunc
-    congue nisi vitae suscipit.
-
-    Vel pharetra vel turpis nunc eget. Aliquet enim tortor at auctor urna nunc id cursus metus. Lacus suspendisse
-    faucibus interdum posuere lorem ipsum dolor. Nisl tincidunt eget nullam non. Gravida dictum fusce ut placerat orci
-    nulla. Nibh sit amet commodo nulla facilisi nullam vehicula. Varius sit amet mattis vulputate enim. Ullamcorper
-    malesuada proin libero nunc consequat interdum. Viverra justo nec ultrices dui sapien eget mi proin sed. Lectus sit
-    amet est placerat in egestas erat imperdiet sed. Diam vulputate ut pharetra sit amet aliquam id. Phasellus faucibus
-    scelerisque eleifend donec pretium vulputate sapien nec sagittis. Facilisi cras fermentum odio eu feugiat pretium
-    nibh ipsum. Nunc congue nisi vitae suscipit tellus mauris. In est ante in nibh mauris cursus mattis. Cursus eget
-    nunc scelerisque viverra mauris in. Mattis pellentesque id nibh tortor id aliquet lectus proin nibh. Ullamcorper
-    morbi tincidunt ornare massa eget egestas purus. Cras fermentum odio eu feugiat pretium nibh ipsum.
-
-    Cursus sit amet dictum sit amet justo donec enim diam. Sed risus pretium quam vulputate. Viverra suspendisse potenti
-    nullam ac. Tristique magna sit amet purus gravida quis blandit turpis. Eget sit amet tellus cras. Adipiscing at in
-    tellus integer feugiat scelerisque. Nibh praesent tristique magna sit amet purus gravida quis. Ac orci phasellus
-    egestas tellus rutrum tellus pellentesque eu tincidunt. A iaculis at erat pellentesque adipiscing commodo elit at
-    imperdiet. Tellus integer feugiat scelerisque varius morbi enim nunc faucibus. Vel eros donec ac odio tempor orci
-    dapibus ultrices in.
 </body>
 
 </html>
